# Cinder

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  minimal
examples/: minimal.c
include/cinder/: cinder.h  http.h  log.h  platform.h  router.h  server.h
src/: http.c  log.c  router.c  server.c
src/platform/: posix.c
